Fixed div alignment in intro

--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@
     margin-top: 150px;
     margin-bottom: -40px;
     font-size: 40px;
+    text-align: center;
 }
 
 .build {
     font-size: 20px;
+    text-align: center;
 }
 
 .gt {
